--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 
 <html>
 <head>
-<title>hello world</title>
-
-<style type="text/css">
-
-h2 {color:#336699;}
-</style>
-
+<meta http-equiv="refresh" content="0; url=papers.xml" />
 </head>
-
 <body>
-<h2>hello world</h2>
+
+
 </body>
 
 </html>
