--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@ canvas.toBlob((blob) => {
   };
 
   newImg.src = url;
-  document.body.appendChild(newImg);
+  //document.body.appendChild(newImg);
+  document.querySelector('SE').appendChild(newImg);
 });
 
 }
