--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ canvas.toBlob((blob) => {
 
   newImg.src = url;
   //document.body.appendChild(newImg);
-  document.querySelector('SE').appendChild(newImg);
+  document.getElementById('SE').appendChild(newImg);
 });
 
 }
