--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <meta charset="UTF-8">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 
 <style type="text/css">
 body{font-size:11pt; font-family:Calibri,Verdana, sans-serif;}
@@ -80,8 +82,11 @@ textarea {
 
 <div id="NW">
 <video controls width="100%" height="100%">
-    <source src="test.mp4" type="video/mp4"></source>
+    <source src="test.mp4" id="video_here" type="video/mp4"></source>
   </video>
+
+
+
 
 </div>
 
@@ -96,6 +101,10 @@ textarea {
 <!--------------------------- South West -------------------------------------->
 
 <div id="SW">
+
+<br><br>
+
+ <input type="file" name="file[]" class="file_multi_video" accept="video/*">
 
 Timestamp: <span id="p1" style="color:red; font-size:24pt">aaa</span>
 
@@ -125,6 +134,15 @@ At w3schools.com you will learn how to make a website. They offer free tutorials
 
   <!-- start the script ... within that declare variables as follows... -->
   <script>
+
+
+  $(document).on("change", ".file_multi_video", function(evt) {
+  var $source = $('#video_here');
+  $source[0].src = URL.createObjectURL(this.files[0]);
+  $source.parent()[0].load();
+});
+
+  /* -----------------------------------------*/
   var comment = {};
   var video=document.querySelector('video');
   var canvas=document.querySelector('canvas');
