--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ function myFunction(item)
 
     const liga = document.createElement("a");
     liga.setAttribute("href","#");
-    liga.setAttribute("onclick","playAt(" + item.timestamp; + ")");
+    liga.setAttribute("onclick","playAt(" + item.timestamp + ")");
 
 
     const c = document.createElement("p");
