--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ function myFunction(item)
     const liga = document.createElement("a");
     liga.setAttribute("href","#");
     liga.setAttribute("onclick","playAt(" + item.timestamp + ")");
-    liga.textContent("Play video at: " + item.timestamp);
+    liga.innerHTML = "Play video at: " + item.timestamp;
 
 
     const c = document.createElement("p");
