--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@ Timestamp: <span id="p1" style="color:red; font-size:24pt">0 ms</span>
 
 -->
 
-<p>Falta el link al timestamp del video</p>
+<p>Falta corregir link al timestamp del video cuando se genera un PDF (en el html funciona OK)</p>
+<p>Exportar el HTML a algun wiki, tipo Zim?</p>
 <p>Mejorar el look and feel</p>
+<p>Agregar el nombre / path del video en cuestion</p>
 
 
 
