--- a/test.html
+++ b/test.html
@@ -12,10 +12,19 @@
   if (typeof(Storage) !== "undefined") {
   // Code for localStorage/sessionStorage.
   alert("localStorage might work !!");
+
+  localStorage.setItem("lastname", "Smith456");
+
+// Retrieve
+document.getElementById("result").innerHTML = localStorage.getItem("lastname");
+
+    
 } else {
   // Sorry! No Web Storage support..
 }
   </script>
+
+    <div id="result"></div>
 
   </body>
 </html>
